--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="backgraund">#F8F8F8</color>
+    <color name="textColor">#010035</color>
+    <color name="orangeColor">#FF6E4E</color>
+    <color name="newWhite">#DBDADA</color>
 </resources>
